# app_restore

./: .gitignore  INSTALLATION.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RENAME_INSTRUCTIONS.md  USAGE.md  hooks.py  pyproject.toml  setup.py
app_backup_restore/: api.py
app_backup_restore/data_tools/page/partial_backup/: partial_backup.js  partial_backup.json
app_backup_restore/data_tools/page/partial_restore/: partial_restore.js  partial_restore.json
app_backup_restore/public/css/: app_backup_restore.css
app_backup_restore/public/js/: app_backup_restore.js
